Renamed project. Achieved proportional scaling of new player sprite dependant on resolution. Applied position ratio of player to enable player to remain in same position on screen when resolution changes.

--- a/Hotline_Scunthorpe/CMakeLists.txt
+++ b/Hotline_Scunthorpe/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.7)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-project(Astral_Insanity)
+project(Hotline_Scunthorpe)
 SET(OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})
@@ -35,18 +35,18 @@ include_directories("${SFML_SOURCE_DIR}/include")
 link_directories(${SFML_BINARY_DIR}/lib)
 
 file(GLOB_RECURSE SOURCE_FILES src/*.cpp src/*.h)
-add_executable(Astral_Insanity_main ${SOURCE_FILES})
+add_executable(Hotline_Scunthorpe_main ${SOURCE_FILES})
 
 #copy General resources to build post build script
-add_custom_command(TARGET Astral_Insanity_main POST_BUILD  
-  COMMAND ${CMAKE_COMMAND} -E copy_directory  "${PROJECT_SOURCE_DIR}/res" $<TARGET_FILE_DIR:Astral_Insanity_main>/res)
+add_custom_command(TARGET Hotline_Scunthorpe_main POST_BUILD  
+  COMMAND ${CMAKE_COMMAND} -E copy_directory  "${PROJECT_SOURCE_DIR}/res" $<TARGET_FILE_DIR:Hotline_Scunthorpe_main>/res)
 
 if(${MSVC})
   #set outDir as debugging directory
   #This doesn't work yet?
-  #set_target_properties(Astral_Insanity_main PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "$(TargetDir)")
+  #set_target_properties(Hotline_Scunthorpe_main PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "$(TargetDir)")
   
-  file( WRITE "${CMAKE_CURRENT_BINARY_DIR}/Astral_Insanity_main.vcxproj.user" 
+  file( WRITE "${CMAKE_CURRENT_BINARY_DIR}/Hotline_Scunthorpe_main.vcxproj.user" 
     "<?xml version=\"1.0\" encoding=\"utf-8\"?>
     <Project ToolsVersion=\"4.0\" xmlns=\"http://schemas.microsoft.com/developer/msbuild/2003\">
     <PropertyGroup Condition=\"'$(Configuration)|$(Platform)'=='Debug|x64'\">
@@ -59,12 +59,12 @@ if(${MSVC})
     </PropertyGroup>
   </Project>")
 		
-  target_compile_options(Astral_Insanity_main PUBLIC /MP)
+  target_compile_options(Hotline_Scunthorpe_main PUBLIC /MP)
 
 else()
 
 endif()
-target_link_libraries(Astral_Insanity_main 
+target_link_libraries(Hotline_Scunthorpe_main 
   optimized sfml-graphics debug sfml-graphics-d 
   optimized sfml-audio debug sfml-audio-d 
   optimized sfml-window debug sfml-window-d 
@@ -72,4 +72,4 @@ target_link_libraries(Astral_Insanity_main
   optimized sfml-graphics debug sfml-graphics-d
  )
 
-add_dependencies(Astral_Insanity_main sfml-graphics)
+add_dependencies(Hotline_Scunthorpe_main sfml-graphics)
